--- a/generate/build.gradle
+++ b/generate/build.gradle
@@ -10,14 +10,14 @@ repositories {
 }
 
 dependencies {
-//    testCompile group: 'junit', name: 'junit', version: '4.11'
-//    compile group: 'log4j', name: 'log4j', version: '1.2.17'
-//    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.39'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.39'
 //    compile group: 'ojdbc', name: 'ojdbc', version: '14'
-//    compile group: 'org.postgresql', name: 'postgresql', version: '9.4-1206-jdbc42'
-//    compile group: 'com.hynnet', name: 'sqljdbc4-chs', version: '4.0.2206.100'
+    compile group: 'org.postgresql', name: 'postgresql', version: '9.4-1206-jdbc42'
+    compile group: 'com.hynnet', name: 'sqljdbc4-chs', version: '4.0.2206.100'
 //    compile group:'Issues',name:'beautyeye',version:'3.7'
-//    compile group: 'org.freemarker', name: 'freemarker', version: '2.3.20'
-//    compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
+    compile group: 'org.freemarker', name: 'freemarker', version: '2.3.20'
+    compile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
 }
 
